syntax = "proto3";

package bunkerverse.core.v1;

// Market-related enums for NFT trading

enum MarketStatusProto {
  MARKET_STATUS_UNSPECIFIED = 0;
  NOT_LISTED = 1;
  ACTIVE_LISTING = 2;
  PENDING_TRADE = 3;
  TRADE_COMPLETED = 4;
  LISTING_CANCELLED = 5;
  TRADE_FAILED = 6;
}

enum TransactionReceiptStatusProto {
  TRANSACTION_RECEIPT_STATUS_UNSPECIFIED = 0;
  SUCCESS = 1;
  FAILURE = 2;
  REVERTED = 3;
}

message TransactionRequestProto {
  string transaction_hash = 1;
  bytes payload = 2;
  uint64 gas_limit = 3;
  uint64 gas_price = 4;
  string from_address = 5;
  string to_address = 6;
  uint64 value = 7;
  int64 timestamp = 8;
}

message TransactionReceiptProto {
  string transaction_hash = 1;
  TransactionReceiptStatusProto status = 2;
  uint64 gas_used = 3;
  bytes return_data = 4;
  repeated string logs = 5;
  string block_hash = 6;
  uint64 block_number = 7;
  int64 timestamp = 8;
}